css: fixed weird horizontal scrollbar on slim viewports

--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -1,6 +1,4 @@
 html, body {
-	position: relative;
-	width: 100%;
 	height: 100%;
 }
 
